--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
     <script src="https://code.jquery.com/jquery-2.2.3.min.js" type="text/javascript"></script>
+    <script src="https://cdn.socket.io/socket.io-1.4.5.js" type="text/javascript"></script>
     <script src="/client.js" type="text/javascript"></script>
 </head>
 <body>hello world</body>
