emiting and receiving socket-emited time

--- a/public/index.html
+++ b/public/index.html
@@ -4,5 +4,10 @@
     <script src="https://cdn.socket.io/socket.io-1.4.5.js" type="text/javascript"></script>
     <script src="/client.js" type="text/javascript"></script>
 </head>
-<body>hello world</body>
+<body>
+
+<button id="nappi" type="submit">nappi</button>
+<div id="aika"></div>
+
+</body>
 </html>
