--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,47 @@
 <html>
 <head>
+    <style>
+        @import url(http://fonts.googleapis.com/css?family=Open+Sans);
+
+        body{
+            background:url('http://subtlepatterns.subtlepatterns.netdna-cdn.com/patterns/noisy_net.png') repeat;
+            font-family: "Open Sans",  Impact;
+        }
+        .area{
+            text-align:center;
+            font-size:6.5em;
+            color:#fff;
+            letter-spacing: -7px;
+            font-weight:700;
+            text-transform:uppercase;
+            animation:blur 1s ease-out infinite;
+            text-shadow:0px 0px 5px #fff,
+            0px 0px 7px #fff;
+        }
+
+        @keyframes blur{
+            from{
+                text-shadow:0px 0px 10px #fff,
+                0px 0px 10px #fff,
+                0px 0px 25px #fff,
+                0px 0px 25px #fff,
+                0px 0px 25px #fff,
+                0px 0px 25px #fff,
+                0px 0px 25px #fff,
+                0px 0px 25px #fff,
+                0px 0px 50px #fff,
+                0px 0px 50px #fff,
+                0px 0px 50px #7B96B8,
+                0px 0px 150px #7B96B8,
+                0px 10px 100px #7B96B8,
+                0px 10px 100px #7B96B8,
+                0px 10px 100px #7B96B8,
+                0px 10px 100px #7B96B8,
+                0px -10px 100px #7B96B8,
+                0px -10px 100px #7B96B8;}
+        }
+
+    </style>
     <script src="https://code.jquery.com/jquery-2.2.3.min.js" type="text/javascript"></script>
     <script src="https://cdn.socket.io/socket.io-1.4.5.js" type="text/javascript"></script>
     <script src="/client.js" type="text/javascript"></script>
@@ -7,7 +49,7 @@
 <body>
 
 <button id="nappi" type="submit">nappi</button>
-<div id="aika"></div>
+<div id="aika" class="area"></div>
 
 </body>
 </html>
