Use HTTPS for fonts.googleapis.com to avoid mixed content issues. Removed 'body' background as it was HTTP 404.

--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,9 @@
 <html>
 <head>
     <style>
-        @import url(http://fonts.googleapis.com/css?family=Open+Sans);
+        @import url(https://fonts.googleapis.com/css?family=Open+Sans);
 
         body{
-            background:url('http://subtlepatterns.subtlepatterns.netdna-cdn.com/patterns/noisy_net.png') repeat;
             font-family: "Open Sans",  Impact;
         }
         .area{
